# PopBox

./: .gitignore  Dockerfile  Dokerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: dependencies.py  main.py  worker.py
app/errors/: task_queue_error.py
app/infrastructure/: redis_task_queue.py
app/interfaces/: task_queue.py
app/routes/: task.py
app/schemas/: task.py
