[project]
name = "popbox"
version = "0.1.0"
description = "PopBox is a lightweight event-driven task queue using FastAPI, Redis, and asyncio. It features async task dispatching, retries, and scalable worker design — ideal for learning or as a base for background job systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.4",
    "redis>=6.1.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C90",  # mccabe complexity
  "N",    # pep8-naming
  "SIM",  # simplify
  "RUF",  # ruff-specific
  "D",    # pydocstyle
  "PL",   # pylint-like rules
  "TRY",  # try/except best practices
]

ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D107",  # Missing docstring in __init__
  "D203",  # Conflicts with D211
  "D213",  # Conflicts with D212
]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["app"]
combine-as-imports = true
